--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="text" value="" placeholder="Pesan" id="pesan" name="pesan">
         </p>
         <p>
-            <button type="button" onclick="kirim()">Kirim</button>
+            <button type="button" onclick="kirim()" class="border p1 rounded">Kirim</button>
         </p>
     </form>
     <script type="text/javascript">
